--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,3 +8,33 @@
 # where the inspected file is and continue its way up to the root directory.
 #
 # See https://docs.rubocop.org/rubocop/configuration
+
+Layout/EmptyLinesAroundAttributeAccessor:
+  Enabled: true
+
+  Layout/SpaceAroundMethodCallOperator:
+  Enabled: true
+  Lint/DeprecatedOpenSSLConstant:
+  Enabled: true
+  Lint/MixedRegexpCaptureTypes:
+  Enabled: true
+  Lint/RaiseException:
+  Enabled: true
+  Lint/StructNewOverride:
+  Enabled: true
+  Style/ExponentialNotation:
+  Enabled: true
+  Style/HashEachMethods:
+  Enabled: true
+Style/HashTransformKeys:
+  Enabled: true
+Style/HashTransformValues:
+  Enabled: true
+Style/RedundantFetchBlock:
+  Enabled: true
+Style/RedundantRegexpCharacterClass:
+  Enabled: true
+Style/RedundantRegexpEscape:
+  Enabled: true
+Style/SlicingWithRange:
+  Enabled: true
