actually add test coverage reporting to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,10 @@ language: ruby
 rvm:
  - "2.6.6"
  - "2.7.1"
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 script: ./bin/spec
+after_script:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
