--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ rvm:
  - "2.7.1"
 before_script:
   - gem install bundler
+  - bundle update --bundler
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
