--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,10 @@ rvm:
  - "2.5.8"
  - "2.6.6"
  - "2.7.1"
-before_script:
+before_install:
   - gem install bundler
   - bundle update --bundler
+before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
